new features
add weather, trading
